# gemini-pro-cli-rs

./: .envrc  Cargo.toml  default.nix  flake.nix  gemini-cli-example.toml
src/: cli.rs  lib.rs  llm.rs  main.rs
