[package]
name = "gemini-cli-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.5.8"
tokio = { version = "1.0", features = ["full", "time"] }
anyhow = "1.0"
thiserror = "1.0"
log = "0.4.20"
serde_json = "1.0.112"
env_logger = "0.11.1"
futures = "0.3.30"
shellexpand = "3.1.0"
tokio-stream = "0.1.14"

[dependencies.google-generative-ai-rs]

git = "https://github.com/hitsmaxft/google-generative-ai-rs.git"
branch = "streaming"
